--- a/Dockerfile_platform
+++ b/Dockerfile_platform
@@ -1,33 +1,11 @@
 # 构建阶段
-FROM node:22.21.1-alpine AS builder
+ARG BASE_IMAGE=dify-chat-base
+FROM ${BASE_IMAGE} AS builder
 WORKDIR /app
 
-# 复制 Prisma schema
-COPY packages/platform/prisma ./packages/platform/prisma/
-COPY packages/platform/package.json ./packages/platform/
-COPY packages/api/package.json ./packages/api/
-COPY packages/components/package.json ./packages/components/
-COPY packages/core/package.json ./packages/core/
-COPY packages/helpers/package.json ./packages/helpers/
-COPY packages/theme/package.json ./packages/theme/
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-
-RUN npm install pnpm@10.8.1 -g
-RUN pnpm install
-
-# 复制所有源码
+# 复制 platform 源码
 COPY packages/platform/ ./packages/platform/
-COPY packages/api/ ./packages/api/
-COPY packages/components/ ./packages/components/
-COPY packages/core/ ./packages/core/
-COPY packages/helpers/ ./packages/helpers/
-COPY packages/theme/ ./packages/theme/
-# components 子包中依赖了 react-app 的 tailwind.config.js，后续优化移除这个依赖关系
-COPY packages/react-app/ ./packages/react-app/
-COPY tsconfig.prod.json ./
 
-# 构建子包
-RUN pnpm build:pkgs
 # 生成 Prisma 客户端
 RUN pnpm --filter dify-chat-platform exec prisma generate
 # 构建 platform
